--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,28 @@
 h1 {
 color: rgb(29, 119, 125);
 font-family: 'Courier New', Courier, monospace;
-
+border: rgb(29, 119, 125) 5px solid
 }
+.align {
+    text-align: center   
+}
+
 
 p {
     font-size: medium;
+    text-align: center
 }
 
 .hobbies {
-
 color: blueviolet;
 }
 
 .img {
-
 height: 274px;
 width:640px
-
 }
 
-#twitter {
-
-color: darkorange;
-
+img.center {
+    display: block;
+    margin: 0 auto;
 }
